Inseri infos do header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Desafio Complementar | Aula 7</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Christian Matias</h1>
+        Profissão: Analista de BI <br>
+        Idade: 31 <br>
+        Signo: Áries <br>
+        Altura: 1,73 <br>
+    </header>
 </body>
 </html>
