inseri infors na article 2

--- a/index.html
+++ b/index.html
@@ -46,5 +46,33 @@
             <li>Leve à geladeira para gelar e sirva frio.</li>
         </ol>
     </section>
+    <section>
+        <table border>
+            <th>Produto</th>
+            <th>Preço Unitário</th>
+            <th>Quantidade em estoque</th>
+            <tr>
+                <td>HD SATA 80 GB</td>
+                <td>R$ 85,00</td>
+                <td>35</td>
+            </tr>
+            <tr>
+                <td>Pen Drive 2 GB</td>
+                <td>R$ 15,00</td>
+                <td>150</td>
+            </tr>
+            <tr>
+                <td>Impressora Laser Colorida</td>
+                <td>R$ 613,99</td>
+                <td>18</td>
+            </tr>
+            <tr>
+                <td>Monitor LCD 17'</td>
+                <td>R$ 309,00</td>
+                <td>41</td>
+            </tr>
+        </table>
+    </section>
+    
 </body>
 </html>
